--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -13,7 +14,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".LoginActivity">
+        <activity android:name=".LoginActivity"
+            android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -21,11 +23,13 @@
         </activity>
         <activity android:name=".RegistrarseActivity"
             android:label="@string/Registrarse"
+            android:windowSoftInputMode="stateHidden"
             android:parentActivityName=".LoginActivity"
             android:theme="@style/AppThemeActionBar"/>
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
+            android:windowSoftInputMode="stateHidden"
             android:theme="@style/AppTheme" />
     </application>
 
